stores and apply several limit sets in the branch creation (#9)
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>